Fixed alignment on post divider for bottom

--- a/FrontendProj/312project/src/components/postView.css
+++ b/FrontendProj/312project/src/components/postView.css
@@ -9,9 +9,9 @@
   padding-top: 2px;
     max-height: 500px;
 }
-.apple {
+.bottomHalf {
     content: "";
-
+    margin-left: 0px;
     width: 100%;
 
     box-shadow: 0 -5px 5px -5px #333;
